--- a/index.html
+++ b/index.html
@@ -93,19 +93,18 @@
       reader.readAsDataURL(file);
     });
 
-   btnGenerar.addEventListener("click", () => {
+  btnGenerar.addEventListener("click", () => {
   if (!imagenVerticalBase64)
     return alert("Selecciona una imagen primero.");
 
   const { jsPDF } = window.jspdf;
   const pdf = new jsPDF({ unit: "mm", format: "A4" });
 
-  const fotoAncho = 27; // mm -> para compensar escala de impresión
+  const fotoAncho = 27; // mm
   const fotoAlto = 33;  // mm
-  const margenX = 15;
-  const margenY = 15;
+  const margenX = 10;
+  const margenY = 20;
   const espacioX = 5;
-  const espacioY = 5;
 
   let x = margenX;
   let y = margenY;
@@ -117,15 +116,10 @@
     pdf.addImage(imagenVerticalBase64, "JPEG", x, y, fotoAncho, fotoAlto);
 
     x += fotoAncho + espacioX;
-    if ((i + 1) % 3 === 0) { // ahora caben menos por fila
-      x = margenX;
-      y += fotoAlto + espacioY;
-    }
   }
 
   pdf.save("fotos_infantil.pdf");
 });
-
 
     function ajustarImagenVertical(base64Img) {
       return new Promise((resolve) => {
