--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     body {
       font-family: sans-serif;
-      padding: 2rem;
+      padding: 1rem;
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -32,7 +32,6 @@
       max-width: 100%;
       max-height: 200px;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
       display: none;
       margin-bottom: 1rem;
     }
@@ -93,33 +92,35 @@
       reader.readAsDataURL(file);
     });
 
-  btnGenerar.addEventListener("click", () => {
-  if (!imagenVerticalBase64)
-    return alert("Selecciona una imagen primero.");
+    btnGenerar.addEventListener("click", () => {
+      if (!imagenVerticalBase64) return alert("Selecciona una imagen primero.");
 
-  const { jsPDF } = window.jspdf;
-  const pdf = new jsPDF({ unit: "mm", format: "A4" });
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF({ unit: "mm", format: "A4" });
 
-  const fotoAncho = 27; // mm
-  const fotoAlto = 33;  // mm
-  const margenX = 10;
-  const margenY = 20;
-  const espacioX = 5;
+      const fotoAncho = 27; // mm
+      const fotoAlto = 33;  // mm
 
-  let x = margenX;
-  let y = margenY;
+      const margenX = 10; // 1 cm lateral
+      const margenY = 5;  // 0.5 cm superior/inferior
 
-  for (let i = 0; i < 5; i++) {
-    pdf.setDrawColor(0);
-    pdf.setLineWidth(0.2);
-    pdf.rect(x, y, fotoAncho, fotoAlto);
-    pdf.addImage(imagenVerticalBase64, "JPEG", x, y, fotoAncho, fotoAlto);
+      const espacioX = 5; // espacio entre columnas
+      const espacioY = 5; // espacio entre filas
 
-    x += fotoAncho + espacioX;
-  }
+      let x = margenX;
+      let y = margenY;
 
-  pdf.save("fotos_infantil.pdf");
-});
+      for (let fila = 0; fila < 2; fila++) {
+        x = margenX;
+        for (let col = 0; col < 5; col++) {
+          pdf.addImage(imagenVerticalBase64, "JPEG", x, y, fotoAncho, fotoAlto);
+          x += fotoAncho + espacioX;
+        }
+        y += fotoAlto + espacioY;
+      }
+
+      pdf.save("fotos_infantil.pdf");
+    });
 
     function ajustarImagenVertical(base64Img) {
       return new Promise((resolve) => {
@@ -129,7 +130,6 @@
           const ctx = canvas.getContext("2d");
 
           if (img.width > img.height) {
-            // Rotar si está horizontal
             canvas.width = img.height;
             canvas.height = img.width;
             ctx.translate(canvas.width / 2, canvas.height / 2);
@@ -149,3 +149,4 @@
   </script>
 </body>
 </html>
+
